--- a/CSS Grid Tutorial #8 - Mosaic Layout/style.css
+++ b/CSS Grid Tutorial #8 - Mosaic Layout/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 
-/* un-comment to rotate mosiac */
+/* un-comment to rotate mosaic */
 
 /* .content {
     transform: rotateZ(45deg) scale(0.7);
